--- a/UI/app.html
+++ b/UI/app.html
@@ -20,7 +20,7 @@
         <div class="col card-wrapper" data-player="daniil-medvedev">
                 <div class="card border-0">
                     <div class="position-relative rounded-circle overflow-hidden mx-auto custom-circle-image">
-                        <img class="w-100 h-100" src="./imagesdaniil-medvedev.jpg" alt="Card image cap">
+                        <img class="w-100 h-100" src="./images/daniil-medvedev.jpg" alt="Card image cap">
                     </div>
                     <div class="card-body text-center mt-4">
                         <h4 class="text-uppercase card-title">Daniil Medvedev</h4>
@@ -63,6 +63,58 @@
                 </div>
             </div>      
 
+        </div>
+
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="row">
+                    <div class="col-12 mx-auto">
+                        <form action="/file-upload" class="dropzone" id="dropzone">
+                            <div class="dz-message needsclick">
+                                <img src="./images/upload.jpg" width="50vw" height="50vw"><br>
+                                <span class="note needsclick">Drop files here or click to upload</span>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-3 mx-auto">
+                        <button id="submitBtn" type="button" class="btn btn-success">Classify</button>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-sm-8 error" id="error" >
+                <p>Can't classify image. Classifier was not able to detect face and two eyes properly</p>    
+            </div>
+
+            <div class="col-sm-4" id="resultHolder">
+            </div>
+            <div class="col-sm-4" id="divClassTable">
+                <table id="classTable">
+                        <tr>
+                            <th>Player</th>
+                            <th>Probability Score</th>
+                        </tr>
+                        <tr>
+                            <td>Daniil Medvedev</td>
+                            <td id="score_daniil_medvedev"></td>
+                        </tr>
+                        <tr>
+                            <td>Novak Djokovic</td>
+                            <td id="score_novak_djokovic"></td>
+                        </tr>
+                        <tr>
+                            <td>Rafael Nadal</td>
+                            <td id="score_rafael_nadal"></td>
+                        </tr>
+                        <tr>
+                            <td>Stefanos Tsitsipas</td>
+                            <td id="score_stefanos_tsitsipas"></td>
+                        </tr>
+                </table>
+            </div>
+            
         </div>
 
     </div>
