--- a/UI/app.html
+++ b/UI/app.html
@@ -98,19 +98,19 @@
                         </tr>
                         <tr>
                             <td>Daniil Medvedev</td>
-                            <td id="score_daniil_medvedev"></td>
+                            <td id="score_daniil-medvedev"></td>
                         </tr>
                         <tr>
                             <td>Novak Djokovic</td>
-                            <td id="score_novak_djokovic"></td>
+                            <td id="score_novak-djokovic"></td>
                         </tr>
                         <tr>
                             <td>Rafael Nadal</td>
-                            <td id="score_rafael_nadal"></td>
+                            <td id="score_rafael-nadal"></td>
                         </tr>
                         <tr>
                             <td>Stefanos Tsitsipas</td>
-                            <td id="score_stefanos_tsitsipas"></td>
+                            <td id="score_stefanos-tsitsipas"></td>
                         </tr>
                 </table>
             </div>
